--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: docker:17.05.0-ce-git
     steps:
-      - checkouts
+      - checkout
       - setup_remote_docker
       - run:
           name: Install dependencies
