--- a/terraform/modules/ecs/tasks/teaser_task_definition.json
+++ b/terraform/modules/ecs/tasks/teaser_task_definition.json
@@ -1,7 +1,7 @@
 [
   {
     "name": "teaser",
-    "image": "pboyer/teaser:latest",
+    "image": "${image}",
     "portMappings": [
       {
         "containerPort": 80,
