--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,12 +42,16 @@ jobs:
       #     name: Run tests
       #     command: |
       #       docker-compose -f ./docker-compose.test.yml up
-      # - deploy:
-      #     name: Push application Docker image
-      #     command: |
-      #       if [ "${CIRCLE_BRANCH}" == "master" ]; then
-      #         login="$(aws ecr get-login)"
-      #         ${login}
-      #         docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-      #         docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-      #       fi
+      - push:
+          name: Push application Docker image
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker tag app "pboyer/teaser:${CIRCLE_SHA1}"
+              docker push "pboyer/teaser:${CIRCLE_SHA1}"
+            fi
+      - deploy:
+          name: Do terraform ECS update
+          command: |
+            cd terraform/stage
+            terraform init
+            terraform -auto-approve -var 'teaser_docker_image=pboyer/teaser:${CIRCLE_SHA1}'
