--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,9 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-              docker tag app "pboyer/teaser:${CIRCLE_BUILD_NUM}"
-              docker push "pboyer/teaser:${CIRCLE_BUILD_NUM}"
+              docker tag app "pboyer/teaser:${CIRCLE_SHA1}"
+              docker push "pboyer/teaser:${CIRCLE_SHA1}"
               cd terraform/stage
               ../bin/terraform/Linux/terraform init
-              ../bin/terraform/Linux/terraform apply -auto-approve -var "teaser_docker_image=pboyer/teaser:${CIRCLE_BUILD_NUM}"
+              ../bin/terraform/Linux/terraform apply -auto-approve -var "teaser_docker_image=pboyer/teaser:${CIRCLE_SHA1}"
             fi
